[Fix] description align

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -90,7 +90,7 @@ h5 {
     font-size: 14px;
 }
 
-.description {
+.description p {
     font-size: 14px;
     text-align: justify;
     text-align-last: left;
